--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "pg": "^8.16.3",
     "prisma": "^6.14.0",
     "react": "19.1.0",
-    "react-dom": "19.1.0"
+    "react-dom": "19.1.0",
+    "react-player": "^3.3.2"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
