--- a/package.json
+++ b/package.json
@@ -18,13 +18,13 @@
     "@ant-design/icons": "^6.0.0",
     "@ant-design/nextjs-registry": "^1.1.0",
     "@prisma/client": "^6.14.0",
-    "antd": "^5.12.8",
+    "antd": "^5.27.1",
     "bcryptjs": "^3.0.2",
     "next": "15.5.0",
     "pg": "^8.16.3",
     "prisma": "^6.14.0",
-    "react": "19.1.0",
-    "react-dom": "19.1.0",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "react-player": "^3.3.2"
   },
   "devDependencies": {
