--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@prisma/client": "^6.14.0",
     "antd": "^5.27.1",
     "bcryptjs": "^3.0.2",
+    "cloudinary": "^2.7.0",
     "next": "15.5.0",
     "pg": "^8.16.3",
     "prisma": "^6.14.0",
