--- a/package.json
+++ b/package.json
@@ -24,7 +24,10 @@
     "antd": "^5.27.1",
     "bcryptjs": "^3.0.2",
     "cloudinary": "^2.7.0",
+    "form-data": "^4.0.4",
+    "multer": "^2.0.2",
     "next": "15.5.0",
+    "node-fetch": "^3.3.2",
     "pg": "^8.16.3",
     "prisma": "^6.14.0",
     "react": "^18.3.1",
