--- a/package.json
+++ b/package.json
@@ -20,13 +20,16 @@
     "@dnd-kit/core": "^6.3.1",
     "@dnd-kit/sortable": "^10.0.0",
     "@dnd-kit/utilities": "^3.2.2",
+    "@next-auth/prisma-adapter": "^1.0.7",
     "@prisma/client": "^6.14.0",
     "antd": "^5.27.1",
+    "axios": "^1.11.0",
     "bcryptjs": "^3.0.2",
     "cloudinary": "^2.7.0",
     "form-data": "^4.0.4",
     "multer": "^2.0.2",
     "next": "15.5.0",
+    "next-auth": "^4.24.11",
     "node-fetch": "^3.3.2",
     "pg": "^8.16.3",
     "prisma": "^6.14.0",
