--- a/package.json
+++ b/package.json
@@ -27,7 +27,9 @@
     "axios": "^1.11.0",
     "bcryptjs": "^3.0.2",
     "cloudinary": "^2.7.0",
+    "date-fns": "^4.1.0",
     "form-data": "^4.0.4",
+    "jsonwebtoken": "^9.0.2",
     "multer": "^2.0.2",
     "next": "15.5.0",
     "next-auth": "^4.24.11",
