--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "next": "15.5.0",
     "next-auth": "^4.24.11",
     "node-fetch": "^3.3.2",
+    "nodemailer": "^6.10.1",
     "pg": "^8.16.3",
     "prisma": "^6.14.0",
     "react": "^18.3.1",
