--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@dnd-kit/utilities": "^3.2.2",
     "@next-auth/prisma-adapter": "^1.0.7",
     "@prisma/client": "^6.14.0",
+    "@vercel/blob": "^1.1.1",
     "antd": "^5.27.1",
     "axios": "^1.11.0",
     "bcrypt": "^6.0.0",
